--- a/package.json
+++ b/package.json
@@ -77,10 +77,13 @@
     "css-loader": "^3.0.0",
     "electron": "9.1.0",
     "eslint": "^7.4.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.3",
     "fork-ts-checker-webpack-plugin": "^5.0.7",
     "node-loader": "^1.0.0",
+    "prettier": "^2.0.5",
     "style-loader": "^1.2.1",
     "ts-loader": "^8.0.1",
     "typescript": "^3.9.6"
