--- a/package.json
+++ b/package.json
@@ -38,6 +38,10 @@
           "config": {}
         },
         {
+          "name": "@electron-forge/maker-dmg",
+          "config": {}
+        },
+        {
           "name": "@electron-forge/maker-rpm",
           "config": {}
         }
@@ -67,6 +71,7 @@
   "devDependencies": {
     "@electron-forge/cli": "6.0.0-beta.52",
     "@electron-forge/maker-deb": "6.0.0-beta.52",
+    "@electron-forge/maker-dmg": "^6.0.0-beta.52",
     "@electron-forge/maker-rpm": "6.0.0-beta.52",
     "@electron-forge/maker-squirrel": "6.0.0-beta.52",
     "@electron-forge/maker-zip": "6.0.0-beta.52",
@@ -82,6 +87,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.3",
     "fork-ts-checker-webpack-plugin": "^5.0.7",
+    "macos-alias": "^0.2.11",
     "node-loader": "^1.0.0",
     "prettier": "^2.0.5",
     "style-loader": "^1.2.1",
