--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
               "entryPoints": [
                 {
                   "html": "./src/index.html",
-                  "js": "./src/renderer.tsx",
+                  "js": "./src/renderer/index.tsx",
                   "name": "main_window"
                 }
               ]
