--- a/package.json
+++ b/package.json
@@ -87,7 +87,6 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.3",
     "fork-ts-checker-webpack-plugin": "^5.0.7",
-    "macos-alias": "^0.2.11",
     "node-loader": "^1.0.0",
     "prettier": "^2.0.5",
     "style-loader": "^1.2.1",
@@ -101,5 +100,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.21"
+  },
+  "optionalDependencies": {
+    "macos-alias": "^0.2.11"
   }
 }
